--- a/src/components/BuildingGrid.css
+++ b/src/components/BuildingGrid.css
@@ -45,7 +45,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('/island-background.png');
+  background-image: url('/island-background.jpg');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
