Correction du drag/pan de l'image - calcul du delta corrigé

--- a/src/components/IslandView.css
+++ b/src/components/IslandView.css
@@ -151,6 +151,7 @@
   width: 100vw;
   user-select: none;
   -webkit-user-select: none;
+  z-index: 1; /* Below resource bar and navigation */
 }
 
 /* Ocean background pattern - removed, image is the background */
