Ajustement cadrage et luminosite background login

--- a/src/components/AuthModal.css
+++ b/src/components/AuthModal.css
@@ -6,13 +6,13 @@
   bottom: 0;
   background-image: url('/title.png');
   background-size: cover;
-  background-position: center;
+  background-position: center center;
   background-repeat: no-repeat;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 2000;
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(1px);
 }
 
 .auth-modal-overlay::before {
@@ -22,7 +22,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.4);
   z-index: 1;
 }
 
