UI: Ajustement position background et fenetre login/register - Background descendu a 60% - Fenetre positionnee plus bas avec padding-bottom 15%

--- a/src/App.css
+++ b/src/App.css
@@ -97,11 +97,12 @@
   bottom: 0;
   background-image: url('/title.png');
   background-size: cover;
-  background-position: center center;
+  background-position: center 60%;
   background-repeat: no-repeat;
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   justify-content: center;
+  padding-bottom: 15%;
   z-index: 1000;
 }
 
