--- a/src/components/IslandView.css
+++ b/src/components/IslandView.css
@@ -388,6 +388,11 @@
 .zone-building-icon {
   font-size: 32px;
   filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.5));
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
 
 .zone-building-level {
