--- a/src/components/BuildingSprite.css
+++ b/src/components/BuildingSprite.css
@@ -23,17 +23,13 @@
 
 /* Styles pour les différentes tailles */
 .zone-building-icon .building-sprite-image {
-  width: 150px;
-  height: auto;
-  min-height: 200px;
-  object-fit: contain;
+  width: 32px;
+  height: 32px;
 }
 
 .building-card-icon .building-sprite-image {
-  width: 64px;
-  height: auto;
-  min-height: 96px;
-  object-fit: contain;
+  width: 32px;
+  height: 32px;
 }
 
 /* Animation de transition entre niveaux */
