Restauration du positionnement précédent du label des bâtiments

--- a/src/components/IslandView.css
+++ b/src/components/IslandView.css
@@ -380,10 +380,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
-  gap: 0;
+  justify-content: center;
+  gap: 4px;
   position: relative;
-  width: 100%;
 }
 
 .zone-building-icon {
