--- a/src/components/AnimatedSea.css
+++ b/src/components/AnimatedSea.css
@@ -6,11 +6,13 @@
   height: 100%;
   z-index: 0;
   pointer-events: none;
+  overflow: hidden;
 }
 
 .animated-sea-container canvas {
   display: block;
-  width: 100%;
-  height: 100%;
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: contain;
 }
 
