Améliorations vue mer : scroll désactivé, zoom 1.8 par défaut, centrage auto sur île joueur, animation Pixi ticker

--- a/src/components/SeaView.css
+++ b/src/components/SeaView.css
@@ -109,6 +109,9 @@
   cursor: grab;
   user-select: none;
   -webkit-user-select: none;
+  /* Empêcher le scroll de la page */
+  touch-action: none;
+  -webkit-overflow-scrolling: touch;
 }
 
 .animated-sea-wrapper {
